--- a/multiplication app/style.css
+++ b/multiplication app/style.css
@@ -17,6 +17,8 @@ body {
     box-shadow: 0 4px 8px rgba(0,0,0,.4);
     border-radius: 20px;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .input{
